--- a/views/index.pug
+++ b/views/index.pug
@@ -185,7 +185,7 @@ html(lang='en')
                   |  Settings
               li.divider
               li
-                a(href='login.html')
+                a(href='/?logout=1')
                   i.fa.fa-sign-out.fa-fw
                   |  Logout
             // /.dropdown-user
