--- a/views/index.pug
+++ b/views/index.pug
@@ -38,14 +38,11 @@ html(lang='en')
          
           
           li.dropdown
-            a.dropdown-toggle(data-toggle='dropdown', href='#')
+            a.dropdown-toggle(data-toggle='dropdown', href='#')=login
               i.fa.fa-user.fa-fw
               i.fa.fa-caret-down
             ul.dropdown-menu.dropdown-user
-              li
-                a(href='#')
-                  i.fa.fa-user.fa-fw
-                  |  User Profile
+
               li
                 a(href='#')
                   i.fa.fa-gear.fa-fw
@@ -61,13 +58,7 @@ html(lang='en')
         .navbar-default.sidebar(role='navigation')
           .sidebar-nav.navbar-collapse
             ul#side-menu.nav
-              li.sidebar-search
-                .input-group.custom-search-form
-                  input.form-control(type='text', placeholder='Search...')
-                  span.input-group-btn
-                    button.btn.btn-default(type='button')
-                      i.fa.fa-search
-                // /input-group
+
               li
                 a(href='index.html')
                   i.fa.fa-dashboard.fa-fw
