--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html(lang='en' ng-app="cdotApp")
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -32,7 +32,7 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='index.html') ЦДОТ ХГУЭП
+          a.navbar-brand() ЦДОТ ХГУЭП
         // /.navbar-header
         ul.nav.navbar-top-links.navbar-right
          
@@ -166,30 +166,7 @@ html(lang='en')
         // /.row
         .row
           .col-lg-8
-            .panel.panel-default
-              .panel-heading
-                i.fa.fa-bar-chart-o.fa-fw
-                |  Area Chart Example
-                .pull-right
-                  .btn-group
-                    button.btn.btn-default.btn-xs.dropdown-toggle(type='button', data-toggle='dropdown')
-                      | Actions
-                      span.caret
-                    ul.dropdown-menu.pull-right(role='menu')
-                      li
-                        a(href='#') Action
-                      li
-                        a(href='#') Another action
-                      li
-                        a(href='#') Something else here
-                      li.divider
-                      li
-                        a(href='#') Separated link
-              // /.panel-heading
-              .panel-body
-                #morris-area-chart
-              // /.panel-body
-            // /.panel
+
             .panel.panel-default
               .panel-heading
                 i.fa.fa-bar-chart-o.fa-fw
@@ -212,7 +189,7 @@ html(lang='en')
               // /.panel-heading
               .panel-body
                 .row
-                  .col-lg-4
+                  .col-lg-12
                     .table-responsive
                       table.table.table-bordered.table-hover.table-striped
                         thead
@@ -361,72 +338,7 @@ html(lang='en')
             // /.panel
           // /.col-lg-8
           .col-lg-4
-            .panel.panel-default
-              .panel-heading
-                i.fa.fa-bell.fa-fw
-                |  Notifications Panel
-              // /.panel-heading
-              .panel-body
-                .list-group
-                  a.list-group-item(href='#')
-                    i.fa.fa-comment.fa-fw
-                    |  New Comment
-                    span.pull-right.text-muted.small
-                      em 4 minutes ago
-                  a.list-group-item(href='#')
-                    i.fa.fa-twitter.fa-fw
-                    |  3 New Followers
-                    span.pull-right.text-muted.small
-                      em 12 minutes ago
-                  a.list-group-item(href='#')
-                    i.fa.fa-envelope.fa-fw
-                    |  Message Sent
-                    span.pull-right.text-muted.small
-                      em 27 minutes ago
-                  a.list-group-item(href='#')
-                    i.fa.fa-tasks.fa-fw
-                    |  New Task
-                    span.pull-right.text-muted.small
-                      em 43 minutes ago
-                  a.list-group-item(href='#')
-                    i.fa.fa-upload.fa-fw
-                    |  Server Rebooted
-                    span.pull-right.text-muted.small
-                      em 11:32 AM
-                  a.list-group-item(href='#')
-                    i.fa.fa-bolt.fa-fw
-                    |  Server Crashed!
-                    span.pull-right.text-muted.small
-                      em 11:13 AM
-                  a.list-group-item(href='#')
-                    i.fa.fa-warning.fa-fw
-                    |  Server Not Responding
-                    span.pull-right.text-muted.small
-                      em 10:57 AM
-                  a.list-group-item(href='#')
-                    i.fa.fa-shopping-cart.fa-fw
-                    |  New Order Placed
-                    span.pull-right.text-muted.small
-                      em 9:49 AM
-                  a.list-group-item(href='#')
-                    i.fa.fa-money.fa-fw
-                    |  Payment Received
-                    span.pull-right.text-muted.small
-                      em Yesterday
-                // /.list-group
-                a.btn.btn-default.btn-block(href='#') View All Alerts
-              // /.panel-body
-            // /.panel
-            .panel.panel-default
-              .panel-heading
-                i.fa.fa-bar-chart-o.fa-fw
-                |  Donut Chart Example
-              .panel-body
-                #morris-donut-chart
-                a.btn.btn-default.btn-block(href='#') View Details
-              // /.panel-body
-            // /.panel
-            .chat-panel.panel.panel-default
+            .chat-panel.panel.panel-default(ng-controller="chatController" ng-init="loadAllChat()")
               .panel-heading
                 i.fa.fa-comments.fa-fw
                 |  Chat
@@ -457,57 +369,21 @@ html(lang='en')
                         |  Sign Out
               // /.panel-heading
               .panel-body
-                ul.chat
-                  li.left.clearfix
-                    span.chat-img.pull-left
-                      img.img-circle(src='http://placehold.it/50/55C1E7/fff', alt='User Avatar')
-                    .chat-body.clearfix
-                      .header
-                        strong.primary-font Jack Sparrow
-                        small.pull-right.text-muted
-                          i.fa.fa-clock-o.fa-fw
-                          |  12 mins ago
-                      p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                  li.right.clearfix
-                    span.chat-img.pull-right
-                      img.img-circle(src='http://placehold.it/50/FA6F57/fff', alt='User Avatar')
-                    .chat-body.clearfix
-                      .header
-                        small.text-muted
-                          i.fa.fa-clock-o.fa-fw
-                          |  13 mins ago
-                        strong.pull-right.primary-font Bhaumik Patel
-                      p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                  li.left.clearfix
-                    span.chat-img.pull-left
-                      img.img-circle(src='http://placehold.it/50/55C1E7/fff', alt='User Avatar')
-                    .chat-body.clearfix
-                      .header
-                        strong.primary-font Jack Sparrow
-                        small.pull-right.text-muted
-                          i.fa.fa-clock-o.fa-fw
-                          |  14 mins ago
-                      p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                  li.right.clearfix
-                    span.chat-img.pull-right
-                      img.img-circle(src='http://placehold.it/50/FA6F57/fff', alt='User Avatar')
-                    .chat-body.clearfix
-                      .header
-                        small.text-muted
-                          i.fa.fa-clock-o.fa-fw
-                          |  15 mins ago
-                        strong.pull-right.primary-font Bhaumik Patel
-                      p
-                        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
+                ul.chat(ng-repeat="item in chatList")                  
+                    li.left.clearfix
+                      span.chat-img.pull-left
+                        img.img-circle(src='http://placehold.it/50/55C1E7/fff', alt='User Avatar')
+                      .chat-body.clearfix
+                        .header
+                          strong.primary-font {{item.fname + " " + item.lname + " (" + item.time + ")" }}
+                        p {{item.message}}
+                  
               // /.panel-body
               .panel-footer
                 .input-group
                   input#btn-input.form-control.input-sm(type='text', placeholder='Type your message here...')
                   span.input-group-btn
-                    button#btn-chat.btn.btn-warning.btn-sm
+                    button#btn-chat.btn.btn-warning.btn-sm(ng-click="addItem();")
                       | Send
               // /.panel-footer
             // /.panel .chat-panel
@@ -516,14 +392,14 @@ html(lang='en')
       // /#page-wrapper
     // /#wrapper
     // jQuery
+    script(src='javascripts/angular.js')
+    script(src='javascripts/common.js')
     script(src='javascripts/jquery.min.js')
     // Bootstrap Core JavaScript
     script(src='javascripts/bootstrap.min.js')
     // Metis Menu Plugin JavaScript
-    script(src='javascripts/metisMenu.min.js')
-    // Morris Charts JavaScript
+
     script(src='javascripts/raphael.min.js')
-    script(src='javascripts/morris.min.js')
-    script(src='javascripts/morris-data.js')
+
     // Custom Theme JavaScript
-    script(src='javascripts/sb-admin-2.min.js')
+
