--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,11 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+a:hover{
+	text-decoration: none;
 }
 
-a {
-  color: #00B7FF;
+.usersPanel a:hover
+{
+	cursor:pointer;
 }
+
+
