--- a/views/users.pug
+++ b/views/users.pug
@@ -1,12 +1,12 @@
 doctype html
-html(lang='en' ng-app="cdotApp" )
+html(lang='en' ng-app="usersApp" )
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     meta(name='author', content='')
-    title ЦДОТ - БД
+    title ЦДОТ - Пользователи
     // Bootstrap Core CSS
     link(href='stylesheets/bootstrap.min.css', rel='stylesheet')
     // MetisMenu CSS
@@ -15,6 +15,7 @@ html(lang='en' ng-app="cdotApp" )
     link(href='stylesheets/sb-admin-2.min.css', rel='stylesheet')
     // Morris Charts CSS
     link(href='stylesheets/morris.css', rel='stylesheet')
+    link(href='stylesheets/style.css', rel='stylesheet')
     // Custom Fonts
     link(href='stylesheets/font-awesome.min.css', rel='stylesheet', type='text/css')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -22,7 +23,7 @@ html(lang='en' ng-app="cdotApp" )
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-  body(ng-controller="chatController")
+  body(ng-controller="usersController")
     #wrapper
       // Navigation
       nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bottom: 0')
@@ -102,7 +103,7 @@ html(lang='en' ng-app="cdotApp" )
       #page-wrapper
         .row
           .col-lg-12
-            h1.page-header Главная страница
+            h1.page-header Пользователи
           // /.col-lg-12
         // /.row
         .row
@@ -166,108 +167,44 @@ html(lang='en' ng-app="cdotApp" )
                   span.pull-right
                     i.fa.fa-arrow-circle-right
                   .clearfix
-        // /.row
         .row
-          .col-lg-7
-
-            .panel.panel-default
-              .panel-heading
-                i.fa.fa-bar-chart-o.fa-fw
-                |  Последние события
-                
-              .panel-body
-                .row
-                  .col-lg-12
-                    .table-responsive
-                      table.table.table-bordered.table-hover.table-striped
+          .col-lg-9
+            table.table.table-bordered.table-hover.table-striped.usersPanel(ng-init="loadUsers()")
                         thead
                           tr
-                            th #
-                            th Date
-                            th Time
-                            th Amount
-                        tbody
+                            th ID
+                            th Имя
+                            th Фалимия
+                            th Уровень доступа
+                            th(ng-show="editPanel")
+                        tbody(ng-repeat="user in users")
                           tr
-                            td 3326
-                            td 10/21/2013
-                            td 3:29 PM
-                            td $321.33
-                          tr
-                            td 3325
-                            td 10/21/2013
-                            td 3:20 PM
-                            td $234.34
-                          tr
-                            td 3324
-                            td 10/21/2013
-                            td 3:03 PM
-                            td $724.17
-                          tr
-                            td 3323
-                            td 10/21/2013
-                            td 3:00 PM
-                            td $23.71
-                          tr
-                            td 3322
-                            td 10/21/2013
-                            td 2:49 PM
-                            td $8345.23
-                          tr
-                            td 3321
-                            td 10/21/2013
-                            td 2:23 PM
-                            td $245.12
-                          tr
-                            td 3320
-                            td 10/21/2013
-                            td 2:15 PM
-                            td $5663.54
-                          tr
-                            td 3319
-                            td 10/21/2013
-                            td 2:13 PM
-                            td $943.45
-                    // /.table-responsive
-                  // /.col-lg-4 (nested)
-                  .col-lg-8
-                    #morris-bar-chart
-                  // /.col-lg-8 (nested)
-                // /.row
-              // /.panel-body
-            // /.panel
-            
-          .col-lg-5
-            .chat-panel.panel.panel-default( ng-init="loadAllChat()")
-              .panel-heading
-                i.fa.fa-comments.fa-fw
-                |  Чат
+                            td {{user.id}}
+                            td {{user.fname}}
+                            td {{user.lname}}
+                            td {{user.rights}}
+                            td(ng-show="editPanel") 
+                                a
+                                  i.fa.fa-pencil
 
-                  
-              // /.panel-heading
-              .panel-body
-                ul.chat(ng-repeat="item in chatList")                  
-                    li.clearfix                      
-                      .chat-body.clearfix
-                        .header
-                          strong.primary-font {{item.fname + " " + item.lname + " (" + item.time + ")" }}
-                        p {{item.message}}
-                  
-              // /.panel-body
-              .panel-footer
-                .input-group
-                  input#btn-input.form-control.input-sm(type='text' placeholder='Напишите ваше сообщение тут...' ng-model="chatInp")
-                  span.input-group-btn
-                    button#btn-chat.btn.btn-warning.btn-sm(ng-click="addItem(chatInp);")
-                      | Send
-              // /.panel-footer
-            // /.panel .chat-panel
-          // /.col-lg-4
-        // /.row
-      // /#page-wrapper
-    // /#wrapper
-    // jQuery
+
+          .col-lg-3
+            ul.list-group.text-left.usersPanel
+              a(ng-click="setEditPanelTrue()")
+                li.list-group-item.editUserButton Редактировать
+              a(href="#")
+                li.list-group-item.del Удалить
+              a(href="#")
+                li.list-group-item.editR Изменить права
+              
+
+
+                         
+              
+            
+
     script(src='javascripts/angular.js')
-    script(src='javascripts/chatAngular.js')
+    script(src='javascripts/usersAngular.js')
     script(src='javascripts/jquery.min.js')
     // Bootstrap Core JavaScript
     script(src='javascripts/bootstrap.min.js')
