--- a/views/students.pug
+++ b/views/students.pug
@@ -1,12 +1,12 @@
 doctype html
-html(lang='en' ng-app="cdotApp" )
+html(lang='en' ng-app="studentsApp" )
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     meta(name='author', content='')
-    title ЦДОТ - БД
+    title ЦДОТ - Студенты
     // Bootstrap Core CSS
     link(href='stylesheets/bootstrap.min.css', rel='stylesheet')
     // MetisMenu CSS
@@ -15,6 +15,7 @@ html(lang='en' ng-app="cdotApp" )
     link(href='stylesheets/sb-admin-2.min.css', rel='stylesheet')
     // Morris Charts CSS
     link(href='stylesheets/morris.css', rel='stylesheet')
+    link(href='stylesheets/style.css', rel='stylesheet')
     // Custom Fonts
     link(href='stylesheets/font-awesome.min.css', rel='stylesheet', type='text/css')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -22,7 +23,7 @@ html(lang='en' ng-app="cdotApp" )
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-  body(ng-controller="chatController")
+  body(ng-controller="studentsController")
     #wrapper
       // Navigation
       nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bottom: 0')
@@ -102,7 +103,7 @@ html(lang='en' ng-app="cdotApp" )
       #page-wrapper
         .row
           .col-lg-12
-            h1.page-header Главная страница
+            h1.page-header Студенты
           // /.col-lg-12
         // /.row
         .row
@@ -112,8 +113,8 @@ html(lang='en' ng-app="cdotApp" )
                 .row
                   .col-xs-3
                     i.fa.fa-database.fa-5x
-                  .col-xs-9.text-right
-                    .huge 26
+                  .col-xs-9.text-right(ng-repeat="count in count")
+                    .huge {{count}}
                     div Студентов в базе
               a(href='#')
                 .panel-footer
@@ -166,109 +167,105 @@ html(lang='en' ng-app="cdotApp" )
                   span.pull-right
                     i.fa.fa-arrow-circle-right
                   .clearfix
-        // /.row
         .row
-          .col-lg-7
+          .col-lg-4
+            .form-group
+              label ФИО
+              input.form-control(type="text" ng-model="queryFIO")
+          .col-lg-2
+            .form-group
+              label Группа
+              select.form-control(ng-model="gr.groupSelect")
+                option
+                option(ng-repeat='gp in groups', value='{{gp.gruppa}}') {{gp.gruppa}}
 
-            .panel.panel-default
-              .panel-heading
-                i.fa.fa-bar-chart-o.fa-fw
-                |  Последние события
                 
-              .panel-body
-                .row
-                  .col-lg-12
-                    .table-responsive
-                      table.table.table-bordered.table-hover.table-striped
+                
+                
+                  
+          
+                  
+          .col-lg-2
+            .form-group
+              label Год Поступления
+              input.form-control(type="text" ng-model="year")
+          .col-lg-2
+            .form-group
+              label Оплата
+              select.form-control(name="singleSelect" id="singleSelect" ng-model="aa.singleSelect")
+                option(value = "undefined")
+                option(value="false" ) Не оплачено
+                option(value="true") Оплачено
+          .col-lg-1
+            label Найти
+            button.btn.btn-success(ng-click="loadStudents(0,30,queryFIO,gr.groupSelect,year,aa.singleSelect)")
+              i.fa.fa-search.fa-1x
+          .col-lg-1
+            label Добавить
+            button.btn.btn-success
+              i.fa.fa-plus.fa-1x  
+                  
+
+
+
+
+        
+
+        .row
+          .col-lg-12
+            table.table.table-bordered.table-hover.table-striped.usersPanel(ng-init="loadStudents()")
                         thead
                           tr
-                            th #
-                            th Date
-                            th Time
-                            th Amount
-                        tbody
-                          tr
-                            td 3326
-                            td 10/21/2013
-                            td 3:29 PM
-                            td $321.33
-                          tr
-                            td 3325
-                            td 10/21/2013
-                            td 3:20 PM
-                            td $234.34
-                          tr
-                            td 3324
-                            td 10/21/2013
-                            td 3:03 PM
-                            td $724.17
-                          tr
-                            td 3323
-                            td 10/21/2013
-                            td 3:00 PM
-                            td $23.71
-                          tr
-                            td 3322
-                            td 10/21/2013
-                            td 2:49 PM
-                            td $8345.23
-                          tr
-                            td 3321
-                            td 10/21/2013
-                            td 2:23 PM
-                            td $245.12
-                          tr
-                            td 3320
-                            td 10/21/2013
-                            td 2:15 PM
-                            td $5663.54
-                          tr
-                            td 3319
-                            td 10/21/2013
-                            td 2:13 PM
-                            td $943.45
-                    // /.table-responsive
-                  // /.col-lg-4 (nested)
-                  .col-lg-8
-                    #morris-bar-chart
-                  // /.col-lg-8 (nested)
-                // /.row
-              // /.panel-body
-            // /.panel
-            
-          .col-lg-5
-            .chat-panel.panel.panel-default( ng-init="loadAllChat()")
-              .panel-heading
-                i.fa.fa-comments.fa-fw
-                |  Чат
+                            th ID
+                            th ФИО
+                            th Дата рождения
+                            th Группа
+                            th e-mail
+                            th Год поступления
+                            th № Зачетной книжки
+                            th Состояние
+                            th Оплата
 
-                  
-              // /.panel-heading
-              .panel-body
-                ul.chat(ng-repeat="item in chatList")                  
-                    li.clearfix                      
-                      .chat-body.clearfix
-                        .header
-                          strong.primary-font {{item.fname + " " + item.lname + " (" + item.time + ")" }}
-                        p {{item.message}}
-                  
-              // /.panel-body
-              .panel-footer
-                .input-group
-                  input#btn-input.form-control.input-sm(type='text' placeholder='Напишите ваше сообщение тут...' ng-model="chatInp")
-                  span.input-group-btn
-                    button#btn-chat.btn.btn-warning.btn-sm(ng-click="addItem(chatInp);")
-                      | Send
-              // /.panel-footer
-            // /.panel .chat-panel
-          // /.col-lg-4
-        // /.row
-      // /#page-wrapper
-    // /#wrapper
-    
-    // jQuery
+                        tbody(ng-repeat="student in studentsModel track by $index")
+                          tr
+                            td {{student.id}}
+                            td {{student.fio}}
+                            td {{student.dr}}
+                            td {{student.grup}}
+                            td {{student.email}}
+                            td {{student.god_postup}}
+                            td {{student.zachotka}}
+                            td {{student.sostoyanie}}
+                            td {{student.oplata}}
+          .row
+            .col-lg-12.text-center.loader
+              .cssload-container
+                ul.cssload-flex-container
+                  li
+                    span.cssload-loading.cssload-one
+                    span.cssload-loading.cssload-two
+                    span.cssload-loading-center
+          .row
+            .col-lg-12.text-center
+              p Показано: {{amount}} из {{cou}}
+              ul.pagination(ng-repeat="item in pug track by $index")
+                li
+                  a(href='#') {{item}}
+              
+               
+
+
+          
+              
+              
+
+
+                         
+              
+            
+
     script(src='javascripts/angular.js')
-    script(src='javascripts/chatAngular.js')
+    script(src='javascripts/studentsAngular.js')
     script(src='javascripts/jquery.min.js')
     // Bootstrap Core JavaScript
     script(src='javascripts/bootstrap.min.js')
@@ -277,4 +274,27 @@ html(lang='en' ng-app="cdotApp" )
     script(src='javascripts/raphael.min.js')
 
     // Custom Theme JavaScript
+    // HTML-код модального окна
+    #editUser.modal.fade
+      .modal-dialog.modal-lg
+        .modal-content
+          // Заголовок модального окна
+          .modal-header
+            button.close(type='button', data-dismiss='modal', aria-hidden='true') ×
+            h4.modal-title Редактирование пользователя
+          // Основное содержимое модального окна
+          .modal-body
+          
+          // Футер модального окна
+          .modal-footer
+            .alert.alert-success.text-left(ng-show="successUPD")
+              h5 Успешно
+            button.btn.btn-default(type='button', data-dismiss='modal') Закрыть
+            button.btn.btn-primary(type='button' class="button-to-push-user" ng-click="updUser()") Сохранить изменения
+    // Скрипт, вызывающий модальное окно после загрузки страницы
+    script.
+      $(document).ready(function() {
+      $("#myModalBox").modal('show');
+      });
+
 
